# spector

./: .dockerignore  .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  LABS.md  NOTICE  PROJECT_CONTEXT.md  README.md  SECURITY.md  agent_changelog.md  cla-signatures.json  docker-compose.local.yml  docker-compose.synapse.yml  docker-compose.yml  pom.xml  run-bench.ps1  spector-bench-bge.yml  spector-bench.yml  spector.yml.example
.github/: CODEOWNERS  coverage-baseline.json  dependabot.yml  pull_request_template.md
bench/: README.md
cortex/: README.md
docs/: mkdocs.yml
memory/: README.md
nucleus/: README.md
scripts/: add-query-entities.ps1  benchmark-beir.ps1  benchmark-compare.ps1  cognitive-benchmark.ps1  cognitive-generate.ps1  enrich-biographical-corpus.ps1  fix-dataset-validation.ps1  generate_thompson_dataset.py  ingest-docs.bat  mcp-config.json  run-all-benchmarks.ps1  start-cortex-dev.ps1  start-cortex-synapse.ps1  start-mcp.bat  test-mcp-tools.ps1  test-vector.ps1
sdks/python/: README.md  pyproject.toml
sdks/python/src/spector/: __init__.py  client.py  engine.py  memory.py  models.py  transport.py
sdks/python/tests/: test_models.py
spector-bench/: README.md  pom.xml
spector-bom/: pom.xml
spector-cli/: README.md  pom.xml
spector-client/: README.md  pom.xml
spector-cluster/: README.md
spector-commons/: README.md  pom.xml
spector-config/: pom.xml
spector-core/: README.md  pom.xml
spector-cortex/: Dockerfile  angular.json  package-lock.json  package.json
spector-dist/: pom.xml
synapse/: README.md
(+1817 files in other folders)
